--- a/OOP-Class-TS-Level-1_12/style.css
+++ b/OOP-Class-TS-Level-1_12/style.css
@@ -61,10 +61,17 @@ h1 {
 }
 
 #ice-container .box .star {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 	font-size: 4rem;
-	font-weight: bold;
-	mix-blend-mode: plus-lighter;
+	/*background-color: white;*/
+	width: 3rem;
+	height: 3rem;
+	border-radius: 50%;
 	margin-bottom: 2rem;
+	line-height: 2;
+	padding: 32px 35px 38px 35px;
 }
 
 #ice-container .box h2 {
@@ -73,6 +80,16 @@ h1 {
 	letter-spacing: 4px;
 	color: var(--color_black);
 	margin-bottom: 2rem;
+}
+
+#ice-container .box h3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	font-weight: 300;
+	padding: 0 20px;
+	height: 50px;
 }
 
 #ice-container .box:hover {
@@ -106,9 +123,11 @@ h1 {
 
 #ice-container .box:nth-of-type(1) .star {
 	color: var(--color_berry);
+	border: 3px solid var(--color_berry);
 }
 
-#ice-container .box:nth-of-type(1) h2 {
+#ice-container .box:nth-of-type(1) h2,
+#ice-container .box:nth-of-type(1) h3 {
 	color: var(--color_berry);
 }
 
@@ -125,9 +144,11 @@ h1 {
 
 #ice-container .box:nth-of-type(2) .star {
 	color: var(--color_chocolate);
+	border: 3px solid var(--color_chocolate);
 }
 
-#ice-container .box:nth-of-type(2) h2 {
+#ice-container .box:nth-of-type(2) h2,
+#ice-container .box:nth-of-type(2) h3 {
 	color: var(--color_chocolate);
 }
 
@@ -143,9 +164,11 @@ h1 {
 
 #ice-container .box:nth-of-type(3) .star {
 	color: var(--color_mango);
+	border: 3px solid var(--color_mango);
 }
 
-#ice-container .box:nth-of-type(3) h2 {
+#ice-container .box:nth-of-type(3) h2,
+#ice-container .box:nth-of-type(3) h3 {
 	color: var(--color_mango);
 }
 
@@ -162,9 +185,11 @@ h1 {
 
 #ice-container .box:nth-of-type(4) .star {
 	color: var(--color_pistachio);
+	border: 3px solid var(--color_pistachio);
 }
 
-#ice-container .box:nth-of-type(4) h2 {
+#ice-container .box:nth-of-type(4) h2,
+#ice-container .box:nth-of-type(4) h3 {
 	color: var(--color_pistachio);
 }
 
@@ -180,9 +205,11 @@ h1 {
 
 #ice-container .box:nth-of-type(5) .star {
 	color: var(--color_vanilla);
+	border: 3px solid var(--color_vanilla);
 }
 
-#ice-container .box:nth-of-type(5) h2 {
+#ice-container .box:nth-of-type(5) h2,
+#ice-container .box:nth-of-type(5) h3 {
 	color: var(--color_vanilla);
 }
 
