--- a/OOP-Class-TS-Level-1_12/style.css
+++ b/OOP-Class-TS-Level-1_12/style.css
@@ -223,3 +223,10 @@ h1 {
 	margin-top: 1rem;
 	color: var(--color_cream_white);
 }
+
+@media screen and (max-width: 768px) {
+	#ice-container .box {
+		width: 100%;
+		border: 2px solid blue;
+	}
+}
